y.output
   0  $accept : Prog $end

   1  $$1 :

   2  Prog : ListaDecla $$1 ListInstI

   3  ListInstI : Inst ListInstI
   4            |

   5  ConjInst : Inst
   6           | '{' ListInst '}'

   7  ListInst : Inst ListInst
   8           | Inst

   9  Inst : If
  10       | While
  11       | For
  12       | Atrib ';'
  13       | Printi ';'
  14       | Scani ';'
  15       | DoWhile

  16  VarAtr : var

  17  Atrib : VarAtr '=' Exp
  18        | VarAtr '+' '+'

  19  $$2 :

  20  Atrib : VarAtr $$2 '[' Exp ']' '=' Exp

  21  ListaDecla : Decla ListaDecla
  22             | Funcao ListaDecla
  23             |

  24  Decla : INT var ';'
  25        | INT var '[' num ']' ';'

  26  Printi : PRINTI '(' Exp ')'

  27  Scani : SCANI '(' VarAtr ')'

  28  $$3 :

  29  If : IF TestExpL $$3 ConjInst

  30  $$4 :

  31  $$5 :

  32  While : WHILE $$4 TestExpL $$5 ConjInst

  33  $$6 :

  34  DoWhile : DO $$6 ConjInst WHILE TestExpL

  35  For : FOR ForHeader ConjInst

  36  $$7 :

  37  $$8 :

  38  ForHeader : '(' ForAtrib ';' $$7 ExpL ';' $$8 ForAtrib ')'

  39  ForAtrib : Atrib
  40           |

  41  Funcao : '#' Tipo var '(' ListaArg ')' ConjInst

  42  Tipo : VOID
  43       | INT

  44  ListaArg : Tipo var
  45           | ',' ListaArg

  46  Exp : Exp '+' Exp
  47      | Exp '-' Exp
  48      | Exp '%' Exp
  49      | Exp '*' Exp
  50      | Exp '/' Exp
  51      | '(' Exp ')'
  52      | num
  53      | VarAtr
  54      | VarAtr '[' Exp ']'
  55      | var '(' ExpArgs ')'
  56      | var '(' ')'

  57  ExpArgs : Exp
  58          | ExpArg ',' Exp

  59  TestExpL : '(' ExpL ')'

  60  ExpL : ExpL '&' '&' ExpL
  61       | Exp '=' '=' Exp
  62       | Exp '!' '=' Exp
  63       | Exp '>' '=' Exp
  64       | Exp '<' '=' Exp
  65       | Exp '<' Exp
  66       | Exp '>' Exp

state 0
	$accept : . Prog $end  (0)
	ListaDecla : .  (23)

	INT  shift 1
	'#'  shift 2
	$end  reduce 23
	WHILE  reduce 23
	FOR  reduce 23
	IF  reduce 23
	PRINTI  reduce 23
	SCANI  reduce 23
	DO  reduce 23
	var  reduce 23

	Prog  goto 3
	ListaDecla  goto 4
	Decla  goto 5
	Funcao  goto 6


state 1
	Decla : INT . var ';'  (24)
	Decla : INT . var '[' num ']' ';'  (25)

	var  shift 7
	.  error


state 2
	Funcao : '#' . Tipo var '(' ListaArg ')' ConjInst  (41)

	INT  shift 8
	VOID  shift 9
	.  error

	Tipo  goto 10


state 3
	$accept : Prog . $end  (0)

	$end  accept


state 4
	Prog : ListaDecla . $$1 ListInstI  (2)
	$$1 : .  (1)

	.  reduce 1

	$$1  goto 11


state 5
	ListaDecla : Decla . ListaDecla  (21)
	ListaDecla : .  (23)

	INT  shift 1
	'#'  shift 2
	$end  reduce 23
	WHILE  reduce 23
	FOR  reduce 23
	IF  reduce 23
	PRINTI  reduce 23
	SCANI  reduce 23
	DO  reduce 23
	var  reduce 23

	ListaDecla  goto 12
	Decla  goto 5
	Funcao  goto 6


state 6
	ListaDecla : Funcao . ListaDecla  (22)
	ListaDecla : .  (23)

	INT  shift 1
	'#'  shift 2
	$end  reduce 23
	WHILE  reduce 23
	FOR  reduce 23
	IF  reduce 23
	PRINTI  reduce 23
	SCANI  reduce 23
	DO  reduce 23
	var  reduce 23

	ListaDecla  goto 13
	Decla  goto 5
	Funcao  goto 6


state 7
	Decla : INT var . ';'  (24)
	Decla : INT var . '[' num ']' ';'  (25)

	';'  shift 14
	'['  shift 15
	.  error


state 8
	Tipo : INT .  (43)

	.  reduce 43


state 9
	Tipo : VOID .  (42)

	.  reduce 42


state 10
	Funcao : '#' Tipo . var '(' ListaArg ')' ConjInst  (41)

	var  shift 16
	.  error


state 11
	Prog : ListaDecla $$1 . ListInstI  (2)
	ListInstI : .  (4)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	$end  reduce 4

	VarAtr  goto 24
	Atrib  goto 25
	ListInstI  goto 26
	Inst  goto 27
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 12
	ListaDecla : Decla ListaDecla .  (21)

	.  reduce 21


state 13
	ListaDecla : Funcao ListaDecla .  (22)

	.  reduce 22


state 14
	Decla : INT var ';' .  (24)

	.  reduce 24


state 15
	Decla : INT var '[' . num ']' ';'  (25)

	num  shift 34
	.  error


state 16
	Funcao : '#' Tipo var . '(' ListaArg ')' ConjInst  (41)

	'('  shift 35
	.  error


state 17
	While : WHILE . $$4 TestExpL $$5 ConjInst  (32)
	$$4 : .  (30)

	.  reduce 30

	$$4  goto 36


state 18
	For : FOR . ForHeader ConjInst  (35)

	'('  shift 37
	.  error

	ForHeader  goto 38


state 19
	If : IF . TestExpL $$3 ConjInst  (29)

	'('  shift 39
	.  error

	TestExpL  goto 40


state 20
	Printi : PRINTI . '(' Exp ')'  (26)

	'('  shift 41
	.  error


state 21
	Scani : SCANI . '(' VarAtr ')'  (27)

	'('  shift 42
	.  error


state 22
	DoWhile : DO . $$6 ConjInst WHILE TestExpL  (34)
	$$6 : .  (33)

	.  reduce 33

	$$6  goto 43


state 23
	VarAtr : var .  (16)

	.  reduce 16


state 24
	Atrib : VarAtr . '=' Exp  (17)
	Atrib : VarAtr . '+' '+'  (18)
	Atrib : VarAtr . $$2 '[' Exp ']' '=' Exp  (20)
	$$2 : .  (19)

	'+'  shift 44
	'='  shift 45
	'['  reduce 19

	$$2  goto 46


state 25
	Inst : Atrib . ';'  (12)

	';'  shift 47
	.  error


state 26
	Prog : ListaDecla $$1 ListInstI .  (2)

	.  reduce 2


state 27
	ListInstI : Inst . ListInstI  (3)
	ListInstI : .  (4)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	$end  reduce 4

	VarAtr  goto 24
	Atrib  goto 25
	ListInstI  goto 48
	Inst  goto 27
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 28
	Inst : If .  (9)

	.  reduce 9


state 29
	Inst : While .  (10)

	.  reduce 10


state 30
	Inst : For .  (11)

	.  reduce 11


state 31
	Inst : Printi . ';'  (13)

	';'  shift 49
	.  error


state 32
	Inst : Scani . ';'  (14)

	';'  shift 50
	.  error


state 33
	Inst : DoWhile .  (15)

	.  reduce 15


state 34
	Decla : INT var '[' num . ']' ';'  (25)

	']'  shift 51
	.  error


state 35
	Funcao : '#' Tipo var '(' . ListaArg ')' ConjInst  (41)

	INT  shift 8
	VOID  shift 9
	','  shift 52
	.  error

	Tipo  goto 53
	ListaArg  goto 54


state 36
	While : WHILE $$4 . TestExpL $$5 ConjInst  (32)

	'('  shift 39
	.  error

	TestExpL  goto 55


state 37
	ForHeader : '(' . ForAtrib ';' $$7 ExpL ';' $$8 ForAtrib ')'  (38)
	ForAtrib : .  (40)

	var  shift 23
	';'  reduce 40

	VarAtr  goto 24
	Atrib  goto 56
	ForAtrib  goto 57


state 38
	For : FOR ForHeader . ConjInst  (35)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	'{'  shift 58
	.  error

	VarAtr  goto 24
	Atrib  goto 25
	Inst  goto 59
	ConjInst  goto 60
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 39
	TestExpL : '(' . ExpL ')'  (59)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 65
	ExpL  goto 66


state 40
	If : IF TestExpL . $$3 ConjInst  (29)
	$$3 : .  (28)

	.  reduce 28

	$$3  goto 67


state 41
	Printi : PRINTI '(' . Exp ')'  (26)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 68


state 42
	Scani : SCANI '(' . VarAtr ')'  (27)

	var  shift 23
	.  error

	VarAtr  goto 69


state 43
	DoWhile : DO $$6 . ConjInst WHILE TestExpL  (34)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	'{'  shift 58
	.  error

	VarAtr  goto 24
	Atrib  goto 25
	Inst  goto 59
	ConjInst  goto 70
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 44
	Atrib : VarAtr '+' . '+'  (18)

	'+'  shift 71
	.  error


state 45
	Atrib : VarAtr '=' . Exp  (17)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 72


state 46
	Atrib : VarAtr $$2 . '[' Exp ']' '=' Exp  (20)

	'['  shift 73
	.  error


state 47
	Inst : Atrib ';' .  (12)

	.  reduce 12


state 48
	ListInstI : Inst ListInstI .  (3)

	.  reduce 3


state 49
	Inst : Printi ';' .  (13)

	.  reduce 13


state 50
	Inst : Scani ';' .  (14)

	.  reduce 14


state 51
	Decla : INT var '[' num ']' . ';'  (25)

	';'  shift 74
	.  error


state 52
	ListaArg : ',' . ListaArg  (45)

	INT  shift 8
	VOID  shift 9
	','  shift 52
	.  error

	Tipo  goto 53
	ListaArg  goto 75


state 53
	ListaArg : Tipo . var  (44)

	var  shift 76
	.  error


state 54
	Funcao : '#' Tipo var '(' ListaArg . ')' ConjInst  (41)

	')'  shift 77
	.  error


state 55
	While : WHILE $$4 TestExpL . $$5 ConjInst  (32)
	$$5 : .  (31)

	.  reduce 31

	$$5  goto 78


state 56
	ForAtrib : Atrib .  (39)

	.  reduce 39


state 57
	ForHeader : '(' ForAtrib . ';' $$7 ExpL ';' $$8 ForAtrib ')'  (38)

	';'  shift 79
	.  error


state 58
	ConjInst : '{' . ListInst '}'  (6)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	.  error

	VarAtr  goto 24
	Atrib  goto 25
	Inst  goto 80
	ListInst  goto 81
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 59
	ConjInst : Inst .  (5)

	.  reduce 5


state 60
	For : FOR ForHeader ConjInst .  (35)

	.  reduce 35


state 61
	VarAtr : var .  (16)
	Exp : var . '(' ExpArgs ')'  (55)
	Exp : var . '(' ')'  (56)

	'('  shift 82
	'+'  reduce 16
	'-'  reduce 16
	'*'  reduce 16
	'/'  reduce 16
	'%'  reduce 16
	'&'  reduce 16
	';'  reduce 16
	'='  reduce 16
	'['  reduce 16
	']'  reduce 16
	')'  reduce 16
	'!'  reduce 16
	'>'  reduce 16
	'<'  reduce 16


state 62
	Exp : num .  (52)

	.  reduce 52


state 63
	Exp : '(' . Exp ')'  (51)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 83


state 64
	Exp : VarAtr .  (53)
	Exp : VarAtr . '[' Exp ']'  (54)

	'['  shift 84
	'+'  reduce 53
	'-'  reduce 53
	'*'  reduce 53
	'/'  reduce 53
	'%'  reduce 53
	'&'  reduce 53
	';'  reduce 53
	'='  reduce 53
	']'  reduce 53
	')'  reduce 53
	'!'  reduce 53
	'>'  reduce 53
	'<'  reduce 53


state 65
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)
	ExpL : Exp . '=' '=' Exp  (61)
	ExpL : Exp . '!' '=' Exp  (62)
	ExpL : Exp . '>' '=' Exp  (63)
	ExpL : Exp . '<' '=' Exp  (64)
	ExpL : Exp . '<' Exp  (65)
	ExpL : Exp . '>' Exp  (66)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'='  shift 90
	'!'  shift 91
	'>'  shift 92
	'<'  shift 93
	.  error


state 66
	TestExpL : '(' ExpL . ')'  (59)
	ExpL : ExpL . '&' '&' ExpL  (60)

	'&'  shift 94
	')'  shift 95
	.  error


state 67
	If : IF TestExpL $$3 . ConjInst  (29)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	'{'  shift 58
	.  error

	VarAtr  goto 24
	Atrib  goto 25
	Inst  goto 59
	ConjInst  goto 96
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 68
	Printi : PRINTI '(' Exp . ')'  (26)
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	')'  shift 97
	.  error


state 69
	Scani : SCANI '(' VarAtr . ')'  (27)

	')'  shift 98
	.  error


state 70
	DoWhile : DO $$6 ConjInst . WHILE TestExpL  (34)

	WHILE  shift 99
	.  error


state 71
	Atrib : VarAtr '+' '+' .  (18)

	.  reduce 18


state 72
	Atrib : VarAtr '=' Exp .  (17)
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	';'  reduce 17
	')'  reduce 17


state 73
	Atrib : VarAtr $$2 '[' . Exp ']' '=' Exp  (20)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 100


state 74
	Decla : INT var '[' num ']' ';' .  (25)

	.  reduce 25


state 75
	ListaArg : ',' ListaArg .  (45)

	.  reduce 45


state 76
	ListaArg : Tipo var .  (44)

	.  reduce 44


state 77
	Funcao : '#' Tipo var '(' ListaArg ')' . ConjInst  (41)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	'{'  shift 58
	.  error

	VarAtr  goto 24
	Atrib  goto 25
	Inst  goto 59
	ConjInst  goto 101
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 78
	While : WHILE $$4 TestExpL $$5 . ConjInst  (32)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	'{'  shift 58
	.  error

	VarAtr  goto 24
	Atrib  goto 25
	Inst  goto 59
	ConjInst  goto 102
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 79
	ForHeader : '(' ForAtrib ';' . $$7 ExpL ';' $$8 ForAtrib ')'  (38)
	$$7 : .  (36)

	.  reduce 36

	$$7  goto 103


state 80
	ListInst : Inst . ListInst  (7)
	ListInst : Inst .  (8)

	WHILE  shift 17
	FOR  shift 18
	IF  shift 19
	PRINTI  shift 20
	SCANI  shift 21
	DO  shift 22
	var  shift 23
	'}'  reduce 8

	VarAtr  goto 24
	Atrib  goto 25
	Inst  goto 80
	ListInst  goto 104
	If  goto 28
	While  goto 29
	For  goto 30
	Printi  goto 31
	Scani  goto 32
	DoWhile  goto 33


state 81
	ConjInst : '{' ListInst . '}'  (6)

	'}'  shift 105
	.  error


state 82
	Exp : var '(' . ExpArgs ')'  (55)
	Exp : var '(' . ')'  (56)

	var  shift 61
	num  shift 62
	'('  shift 63
	')'  shift 106
	ExpArg  shift 107
	.  error

	VarAtr  goto 64
	Exp  goto 108
	ExpArgs  goto 109


state 83
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)
	Exp : '(' Exp . ')'  (51)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	')'  shift 110
	.  error


state 84
	Exp : VarAtr '[' . Exp ']'  (54)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 111


state 85
	Exp : Exp '+' . Exp  (46)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 112


state 86
	Exp : Exp '-' . Exp  (47)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 113


state 87
	Exp : Exp '*' . Exp  (49)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 114


state 88
	Exp : Exp '/' . Exp  (50)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 115


state 89
	Exp : Exp '%' . Exp  (48)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 116


state 90
	ExpL : Exp '=' . '=' Exp  (61)

	'='  shift 117
	.  error


state 91
	ExpL : Exp '!' . '=' Exp  (62)

	'='  shift 118
	.  error


state 92
	ExpL : Exp '>' . '=' Exp  (63)
	ExpL : Exp '>' . Exp  (66)

	var  shift 61
	num  shift 62
	'='  shift 119
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 120


state 93
	ExpL : Exp '<' . '=' Exp  (64)
	ExpL : Exp '<' . Exp  (65)

	var  shift 61
	num  shift 62
	'='  shift 121
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 122


state 94
	ExpL : ExpL '&' . '&' ExpL  (60)

	'&'  shift 123
	.  error


state 95
	TestExpL : '(' ExpL ')' .  (59)

	.  reduce 59


state 96
	If : IF TestExpL $$3 ConjInst .  (29)

	.  reduce 29


state 97
	Printi : PRINTI '(' Exp ')' .  (26)

	.  reduce 26


state 98
	Scani : SCANI '(' VarAtr ')' .  (27)

	.  reduce 27


state 99
	DoWhile : DO $$6 ConjInst WHILE . TestExpL  (34)

	'('  shift 39
	.  error

	TestExpL  goto 124


state 100
	Atrib : VarAtr $$2 '[' Exp . ']' '=' Exp  (20)
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	']'  shift 125
	.  error


state 101
	Funcao : '#' Tipo var '(' ListaArg ')' ConjInst .  (41)

	.  reduce 41


state 102
	While : WHILE $$4 TestExpL $$5 ConjInst .  (32)

	.  reduce 32


state 103
	ForHeader : '(' ForAtrib ';' $$7 . ExpL ';' $$8 ForAtrib ')'  (38)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 65
	ExpL  goto 126


state 104
	ListInst : Inst ListInst .  (7)

	.  reduce 7


state 105
	ConjInst : '{' ListInst '}' .  (6)

	.  reduce 6


state 106
	Exp : var '(' ')' .  (56)

	.  reduce 56


state 107
	ExpArgs : ExpArg . ',' Exp  (58)

	','  shift 127
	.  error


state 108
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)
	ExpArgs : Exp .  (57)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	')'  reduce 57


state 109
	Exp : var '(' ExpArgs . ')'  (55)

	')'  shift 128
	.  error


state 110
	Exp : '(' Exp ')' .  (51)

	.  reduce 51


state 111
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)
	Exp : VarAtr '[' Exp . ']'  (54)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	']'  shift 129
	.  error


state 112
	Exp : Exp . '+' Exp  (46)
	Exp : Exp '+' Exp .  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)

	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'+'  reduce 46
	'-'  reduce 46
	'&'  reduce 46
	';'  reduce 46
	'='  reduce 46
	']'  reduce 46
	')'  reduce 46
	'!'  reduce 46
	'>'  reduce 46
	'<'  reduce 46


state 113
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp '-' Exp .  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)

	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'+'  reduce 47
	'-'  reduce 47
	'&'  reduce 47
	';'  reduce 47
	'='  reduce 47
	']'  reduce 47
	')'  reduce 47
	'!'  reduce 47
	'>'  reduce 47
	'<'  reduce 47


state 114
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp '*' Exp .  (49)
	Exp : Exp . '/' Exp  (50)

	.  reduce 49


state 115
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)
	Exp : Exp '/' Exp .  (50)

	.  reduce 50


state 116
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp '%' Exp .  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)

	.  reduce 48


state 117
	ExpL : Exp '=' '=' . Exp  (61)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 130


state 118
	ExpL : Exp '!' '=' . Exp  (62)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 131


state 119
	ExpL : Exp '>' '=' . Exp  (63)

	var  shift 61
	num  shift 62
	'('  shift 63
	.  error

	VarAtr  goto 64
	Exp  goto 132


state 120
	Exp : Exp . '+' Exp  (46)
	Exp : Exp . '-' Exp  (47)
	Exp : Exp . '%' Exp  (48)
	Exp : Exp . '*' Exp  (49)
	Exp : Exp . '/' Exp  (50)
	ExpL : Exp '>' Exp .  (66)

	'+'  shift 85
	'-'  shift 86
	'*'  shift 87
	'/'  shift 88
	'%'  shift 89
	'&'  reduce 66
	';'  reduce 66
	')'  reduce 66

